--- a/app.json
+++ b/app.json
@@ -4,10 +4,7 @@
     "slug": "hotel-management-app",
     "version": "1.0.0",
     "sdkVersion": "50.0.0",
-    "platforms": [
-      "ios",
-      "android"
-    ],
+    "platforms": ["ios", "android", "web"],
     "extra": {
       "eas": {
         "projectId": "0d17d25c-adb7-4c90-88c9-01295ac7af8e"
