--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.2",
+    "react-native": "0.73.6",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "^2.22.0",
-    "react-native-reanimated": "^3.16.7",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-url-polyfill": "^2.0.0",
